--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <div id="app"></div>
     <script src="src/index.js"></script>
+    <script src="../Calculator.js"></script>
   </body>
 </html>
